<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">知天气</string>
    <string name="version">版本号:1.0.0</string>
    <string name="producer">物联1611 夏冰 毕设作品</string>
    <string name="username">请输入你的用户名</string>
    <string name="password">请输入你的密码</string>
    <string name="code">请输入验证码</string>
    <string name="setusername">请设置你的用户名</string>
    <string name="setpassword">请设置你的密码</string>
    <string name="setpasswordagain">请确认你的密码</string>
    <string name="setusername_title">用户名</string>
    <string name="setpassword_title">密码</string>
    <string name="setpasswordagain_title">确认密码</string>
    <string name="login">登  录</string>
    <string name="unregister">未注册用户？</string>
    <string name="hasaccount">已有账号，</string>
    <string name="nowlogin"><u>立即登录</u></string>
    <string name="register_btn">注册</string>
    <string name="register"><u>去注册</u></string>
    <string name="register_title">用户注册</string>
    <string name="userlogin">用户登录</string>
    <string name="welcome">上午好，欢迎回来！</string>
    <string name="uv_index">紫外线指数</string>
    <string name="dress_index">穿衣指数</string>
    <string name="default_text_type2">_ _</string>
    <string name="travel_index">旅游指数</string>
    <string name="exercise_index">晨练指数</string>
    <string name="city_list">"城市搜索"</string>
    <string name="relogin">重新登录</string>
    <string name="about">关于软件</string>
    <string name="exit">退出应用</string>
    <string name="change"><u>看不清?换一张</u></string>
    <string name="Search_locate_content">输入城市名查询</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">N/A</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
