<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:androd="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal|center_vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingBottom="140dp"
    tools:context="com.ice.weather.ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_radius_style"
        android:layout_below="@+id/rl_head"
        android:layout_marginTop="-60dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:id="@+id/rl_userlogin"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_userlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userlogin"
            android:textSize="21sp"
            android:textColor="@color/blue_black"
            />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_userlogin"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="18sp"
            android:textColor="@color/blue_black"
            />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/rl_welcome">
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_user"
                android:background="@drawable/login_edit_style"
                android:paddingStart="13dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/text_size_16"
                android:textColorHint="@color/blue_black"
                android:textCursorDrawable="@null"
                android:drawablePadding="@dimen/text_size_10"
                android:theme="@style/EditText"
                android:hint="@string/username"/>
            <ImageView
                android:id="@+id/iv_user_clear"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_toEndOf="@+id/et_username"
                android:layout_marginStart="-25dp"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:layout_centerVertical="true"
                android:visibility="invisible"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:layout_below="@+id/rl_username">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock"
                android:background="@drawable/login_edit_style"
                android:textCursorDrawable="@null"
                android:paddingStart="13dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/text_size_16"
                android:textColorHint="@color/blue_black"
                android:drawablePadding="@dimen/text_size_10"
                android:theme="@style/EditText"
                android:hint="@string/password"/>
            <ImageView
                android:id="@+id/iv_password_clear"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_toEndOf="@+id/et_password"
                android:layout_marginStart="-25dp"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:layout_centerVertical="true"
                android:visibility="invisible"/>
            <ImageButton
                android:id="@+id/btn_openpwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:onClick="onClick"
                android:layout_centerVertical="true"
                android:background="@mipmap/visible"
                android:layout_alignRight="@+id/et_password"
                android:layout_marginEnd="40dp"
                android:contentDescription="@null" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_below="@+id/rl_password">
            <EditText
                    android:id="@+id/et_code"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_edit_style"
                    android:textCursorDrawable="@null"
                    android:paddingStart="13dp"
                    android:paddingEnd="0dp"
                    android:textSize="@dimen/text_size_16"
                    android:textColorHint="@color/blue_black"
                    android:drawablePadding="@dimen/text_size_10"
                    android:theme="@style/EditText"
                    android:hint="@string/code"/>

                <ImageView
                        android:id="@+id/iv_codeimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/et_code"
                    android:layout_alignParentEnd="true"
                        />

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/change"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="22dp"
                android:textColor="#A9A9A9"
                android:textSize="12sp"
                android:layout_below="@+id/iv_codeimage"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">
            <Button
                android:id="@+id/btn_sign"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/login_button_style"
                android:onClick="onClick"
                android:text="@string/login"
                android:textColor="@color/azury"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_login"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp">
        <TextView
            android:id="@+id/tv_unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#777684"
            android:text="@string/unregister"
            />
        <TextView
            android:id="@+id/tv_register"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_unregister"
            android:textColor="@color/blue_black"
            android:text="@string/register"/>
        </RelativeLayout>

</RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">
        <ImageView

            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_head"
            android:contentDescription="@null" />
    </RelativeLayout>

</RelativeLayout>