<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_marginTop="20dp">

    <!--生活指数-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white_trans55"
            android:layout_gravity="bottom" />
        </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--竖线-->
        <View
            android:layout_width="0.5dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/white_trans55"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--第一行 -->
            <TableRow>
                <!--左-->
                <RelativeLayout
                    style="@style/WeatherInfo"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="5dp">
                    <ImageView
                        style="@style/ImageView"
                        android:layout_marginTop="5dp"
                        android:src="@mipmap/ic_dress"
                        />
                    <!--舒适度指数-->
                    <TextView
                        android:id="@+id/tv_dressing_index"
                        style="@style/TextView"
                        android:text="@string/default_text_type2"
                        android:textColor="@color/blue_life"/>
                    <TextView
                        style="@style/Table"
                        android:layout_below="@id/tv_dressing_index"
                        android:text="@string/dress_index"
                        android:textColor="@color/blue_life"/>
                </RelativeLayout>
                <!--右-->
                <RelativeLayout
                    style="@style/WeatherInfo"
                    android:layout_marginLeft = "10dp"
                    android:paddingBottom="15dp">
                    <ImageView
                        style="@style/ImageView"
                        android:src="@mipmap/ic_uv"
                        />
                    <!--紫外线-->
                    <TextView
                        android:id="@+id/tv_uv_index"
                        style="@style/TextView"
                        android:text="@string/default_text_type2"
                        android:textColor="@color/blue_life"/>
                    <TextView
                        style="@style/Table"
                        android:layout_below="@id/tv_uv_index"
                        android:text="@string/uv_index"
                        android:textColor="@color/blue_life"/>
                </RelativeLayout>
            </TableRow>
            <View
                style="@style/Horizontal"/>

            <!--第二行-->
            <TableRow>
                <!--左-->
                <RelativeLayout
                    style="@style/WeatherInfo"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="5dp">
                    <ImageView
                        style="@style/ImageView"
                        android:layout_marginTop="5dp"
                        android:src="@mipmap/ic_travel_index"
                        />
                    <!--旅游指数-->
                    <TextView
                        android:id="@+id/tv_travel_index"
                        style="@style/TextView"
                        android:text="@string/default_text_type2"
                        android:textColor="@color/blue_life"/>
                    <TextView
                        style="@style/Table"
                        android:layout_below="@id/tv_travel_index"
                        android:text="@string/travel_index"
                        android:textColor="@color/blue_life"/>
                </RelativeLayout>
                <!--右-->
                <RelativeLayout
                    style="@style/WeatherInfo"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="10dp">
                    <ImageView
                        style="@style/ImageView"
                        android:src="@mipmap/ic_exercise_index" />
                    <!--晨练指数-->
                    <TextView
                        android:id="@+id/tv_exercise_index"
                        style="@style/TextView"
                        android:text="@string/default_text_type2"
                        android:textColor="@color/blue_life"
                        />
                    <TextView
                        style="@style/Table"
                        android:layout_below="@id/tv_exercise_index"
                        android:text="@string/exercise_index"
                        android:textColor="@color/blue_life"/>
                </RelativeLayout>

            </TableRow>

        </TableLayout>

    </FrameLayout>

</LinearLayout>
